--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,60 @@
-<h1>Willian Alves Canuto</h1>
+<main>
+  <section class="hero">
+    <div class="hero-text">
+      <h1>Welcome to Grove Motors</h1>
+      <p>Your adventure starts here. Find your dream car today!</p>
+      <a href="#" class="cta-btn">Own Today</a>
+    </div>
+    <img src="/images/site/own_today.png" alt="Own Today" class="hero-img">
+  </section>
+
+  <div class="background">
+    <section class="upgrades">
+        <h2>Vehicle Upgrades</h2>
+        <div class="upgrades-list">
+        <div class="upgrade-item">
+            <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor">
+            <a href="#">Flux Capacitor</a>
+        </div>
+        <div class="upgrade-item">
+            <img src="/images/upgrades/flame.jpg" alt="Flame Decals">
+            <a href="#">Flame Decals</a>
+        </div>
+        <div class="upgrade-item">
+            <img src="/images/upgrades/bumper_sticker.jpg" alt="Bumper Sticker">
+            <a href="#">Bumper Stickers</a>
+        </div>
+        <div class="upgrade-item">
+            <img src="/images/upgrades/hub-cap.jpg" alt="Hub Caps">
+            <a href="#">Hub Caps</a>
+        </div>
+        </div>
+    </section>
+
+    <section class="vehicles">
+        <h2>Available Vehicles</h2>
+        <div class="vehicles-list">
+        <div class="vehicle-item">
+            <img src="/images/vehicles/delorean.jpg" alt="Delorean">
+            <h3>Delorean</h3>
+            <p>Time travel in style.</p>
+        </div>
+        <div class="vehicle-item">
+            <img src="/images/vehicles/batmobile.jpg" alt="Batmobile">
+            <h3>Batmobile</h3>
+            <p>Fight crime on wheels.</p>
+        </div>
+        <div class="vehicle-item">
+            <img src="/images/vehicles/aerocar.jpg" alt="Aerocar">
+            <h3>Aerocar</h3>
+            <p>Take to the skies.</p>
+        </div>
+        <div class="vehicle-item">
+            <img src="/images/vehicles/monster-truck.jpg" alt="Monster Truck">
+            <h3>Monster Truck</h3>
+            <p>Go big or go home.</p>
+        </div>
+        </div>
+    </section>
+  </div>
+</main>
