--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,4 +2,7 @@
 let year = d.getFullYear() %>
 <footer>
   <p class="copyright">&copy; <%= year %>, CSE 340 App</p>
+  <p>
+    <a href="/inv/error-test" style="color:#ffb300;text-decoration:underline;">Test Server Error</a>
+  </p>
 </footer>
