--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -7,20 +7,31 @@
       <% }) %>
     </div>
   <% } %>
+  <% if (errors) { %>
+    <ul class="notice">
+  <% errors.array().forEach(error => { %>
+    <li><%= error.msg %></li>
+    <%  }) %>
+    </ul>
+  <% } %>
   <form class="register-form" action="/account/register" method="post" autocomplete="off">
     <label for="account_firstname">First Name</label>
-    <input type="text" id="account_firstname" name="account_firstname" required value="<%= typeof account_firstname !== 'undefined' ? account_firstname : '' %>">
+    <input type="text" id="account_firstname" name="account_firstname" required>
 
     <label for="account_lastname">Last Name</label>
-    <input type="text" id="account_lastname" name="account_lastname" required value="<%= typeof account_lastname !== 'undefined' ? account_lastname : '' %>">
+    <input type="text" id="account_lastname" name="account_lastname" required>
 
     <label for="account_email">Email</label>
-    <input type="email" id="account_email" name="account_email" required autocomplete="username" value="<%= typeof account_email !== 'undefined' ? account_email : '' %>">
+    <input type="email" id="account_email" name="account_email" required>
 
     <label for="account_password">Password</label>
     <div class="password-wrapper">
-      <input type="password" id="account_password" name="account_password" required autocomplete="new-password"
-        minlength="12"
+      <input type="password"
+        id="account_password"
+        name="account_password"
+        required
+        pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"
+        autocomplete="new-password"
         title="At least 12 characters, 1 uppercase, 1 number, 1 special character">
       <button type="button" class="toggle-password" onclick="togglePassword()">Show</button>
     </div>
