--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -1,5 +1,5 @@
 
-<main class="login-main">
+<section class="login-main">
       <h1><%= title %></h1>
       <% if (messages && messages.length > 0) { %>
         <div class="flash-message">
@@ -21,4 +21,4 @@
         Don't have an account?
         <a href="/account/register">Register here</a>
       </p>
-</main>
+</section>
