--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -1,4 +1,4 @@
-<main class="register-main">
+<section class="register-main">
   <h1><%= title %></h1>
   <% if (messages && messages.length > 0) { %>
     <div class="flash-message">
@@ -7,22 +7,22 @@
       <% }) %>
     </div>
   <% } %>
-  <% if (errors) { %>
+  <% if (errors && errors.length > 0) { %>
     <ul class="notice">
-  <% errors.array().forEach(error => { %>
+  <% errors.forEach(error => { %>
     <li><%= error.msg %></li>
     <%  }) %>
     </ul>
   <% } %>
   <form class="register-form" action="/account/register" method="post" autocomplete="off">
     <label for="account_firstname">First Name</label>
-    <input type="text" id="account_firstname" name="account_firstname" required>
+    <input type="text" id="account_firstname" name="account_firstname" required value="<%= locals.account_firstname %>">
 
     <label for="account_lastname">Last Name</label>
-    <input type="text" id="account_lastname" name="account_lastname" required>
+    <input type="text" id="account_lastname" name="account_lastname" required value="<%= locals.account_lastname %>">
 
     <label for="account_email">Email</label>
-    <input type="email" id="account_email" name="account_email" required>
+    <input type="email" id="account_email" name="account_email" required value="<%= locals.account_email %>">
 
     <label for="account_password">Password</label>
     <div class="password-wrapper">
@@ -41,7 +41,7 @@
 
     <button type="submit">Register</button>
   </form>
-</main>
+</section>
 <script>
 function togglePassword() {
   const pwd = document.getElementById('account_password');
