--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -1,19 +1,23 @@
 
 <section class="login-main">
       <h1><%= title %></h1>
-      <% if (messages && messages.length > 0) { %>
+      <% if (messages) { %>
         <div class="flash-message">
-          <% messages.forEach(function(msg){ %>
+          <% 
+            const msgArray = Array.isArray(messages) ? messages : [messages]; 
+            msgArray.forEach(function(msg){ 
+          %>
             <p><%= msg %></p>
           <% }) %>
         </div>
-      <% } %>
+      <% } %>   
       <form class="login-form" action="/account/login" method="post" autocomplete="off">
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" required autocomplete="username">
+        <label for="account_email">Email</label>
+        <input type="email" id="account_email" name="account_email" required autocomplete="username">
 
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" required autocomplete="current-password">
+        <label for="account_password">Password</label>
+        <input type="password" id="account_password" name="account_password" required autocomplete="current-password">
+
 
         <button type="submit">Login</button>
       </form>
