--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -1,19 +1,26 @@
 <h1>Account Management</h1>
 
-  <% if (messages && messages.length > 0) { %>
-    <div class="flash-message">
-      <% messages.forEach(msg => { %>
-        <p><%= msg %></p>
-      <% }) %>
-    </div>
-  <% } %>
+<% if (messages && messages.length > 0) { %>
+  <div class="flash-message">
+    <% messages.forEach(msg => { %>
+      <p><%= msg %></p>
+    <% }) %>
+  </div>
+<% } %>
 
-  <% if (errors && errors.length > 0) { %>
-    <ul class="notice">
-      <% errors.forEach(err => { %>
-        <li><%= err.msg %></li>
-      <% }) %>
-    </ul>
-  <% } %>
+<% if (errors && errors.length > 0) { %>
+  <ul class="notice">
+    <% errors.forEach(err => { %>
+      <li><%= err.msg %></li>
+    <% }) %>
+  </ul>
+<% } %>
 
-  <p>You're logged in.</p>
+<h2>Welcome <%= accountData.account_firstname %></h2>
+
+<a href="/account/update/<%= accountData.account_id %>">Update Account Information</a>
+
+<% if (accountData.account_type === "Employee" || accountData.account_type === "Admin") { %>
+  <h3>Inventory Management</h3>
+  <p><a href="/inv/">Go to Inventory Management</a></p>
+<% } %>
