correção de bug que não mostrava a tabela do inventário

--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -22,10 +22,10 @@
   <form id="classificationForm">
     <label for="classificationList">Classification:</label>
     <%- classificationSelect %>
+    <button type="button" id="goButton">GO</button>
   </form>
 
   <table id="inventoryDisplay"></table>
-
+</section>
   <noscript>JavaScript must be enabled to use this page.</noscript>
   <script src="/js/inventory.js"></script>
-</section>
