--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -11,8 +11,8 @@
 
   <nav class="management-links">
     <ul>
-      <li><a href="/inv/add-classification">Add New Classification</a></li>
-      <li><a href="/inv/add-inventory">Add New Inventory Item</a></li>
+      <li><a href="/inv/add-classification" class="btn-link" >Add New Classification</a></li>
+      <li><a href="/inv/add-inventory" class="btn-link">Add New Inventory Item</a></li>
     </ul>
   </nav>
 
